syntax = "proto3";

package zksync.config.da_dispatcher;

message DataAvailabilityDispatcher {
  optional uint32 polling_interval_ms = 1;
  optional uint32 max_rows_to_dispatch = 2;
  optional uint32 max_retries = 3;
  optional bool use_dummy_inclusion_data = 4;
}
